--- a/src/app/views/landing/landing.component.html
+++ b/src/app/views/landing/landing.component.html
@@ -49,50 +49,12 @@
     </div>
   </div>
 
-  <section class="pb-20 bg-blueGray-200 -mt-24">
+  <section class="pb-20 bg-blueGray-200 pt-1">
     <div class="container mx-auto px-4">
-      <div class="flex flex-wrap">
-        <div class="lg:pt-12 pt-6 w-full md:w-6/12 px-4 text-center">
-          <div
-            class="relative flex flex-col min-w-0 break-words bg-white w-full mb-8 shadow-lg rounded-lg"
-          >
-            <div class="px-4 py-5 flex-auto">
-              <div
-                class="text-white p-3 text-center inline-flex items-center justify-center w-12 h-12 mb-5 shadow-lg rounded-full bg-red-400"
-              >
-                <i class="fas fa-award"></i>
-              </div>
-              <h6 class="text-xl font-semibold">Boltunk</h6>
-              <p class="mt-2 mb-4 text-blueGray-500">
-                Ez a mi boltunk
-              </p>
-            </div>
-          </div>
-        </div>
-
-        <div class="w-full md:w-6/12 px-4 text-center">
-          <div
-            class="relative flex flex-col min-w-0 break-words bg-white w-full mb-8 shadow-lg rounded-lg"
-          >
-            <div class="px-4 py-5 flex-auto">
-              <div
-                class="text-white p-3 text-center inline-flex items-center justify-center w-12 h-12 mb-5 shadow-lg rounded-full bg-lightBlue-400"
-              >
-                <i class="fas fa-retweet"></i>
-              </div>
-              <h6 class="text-xl font-semibold">Tevékenységeink</h6>
-              <p class="mt-2 mb-4 text-blueGray-500">
-                Ezt csináljuk
-              </p>
-            </div>
-          </div>
-        </div>
-
-      </div>
       <div class="flex flex-wrap items-center mt-32">
         <div class="w-full px-4 mr-auto ml-auto">
           <div
-            class="text-blueGray-500 p-3 text-center inline-flex items-center justify-center w-16 h-16 mb-6 shadow-lg rounded-full bg-white"
+            class="text-red-600 p-3 text-center inline-flex items-center justify-center w-16 h-16 mb-6 shadow-lg rounded-full bg-red-300"
           >
             <i class="fas fa-store text-xl"></i>
           </div>
@@ -190,7 +152,7 @@
   <section class="relative py-20">
     <div
       class="bottom-auto top-0 left-0 right-0 w-full absolute pointer-events-none overflow-hidden -mt-20 h-20"
-      style="transform: translateZ(0)"
+      style="transform: translateZ(0); top: 1px"
     >
       <svg
         class="absolute bottom-0 overflow-hidden"
@@ -212,9 +174,7 @@
       <div class="flex flex-wrap">
         <div class="w-full px-4 mr-auto ml-auto">
           <div class="md:pr-12">
-            <div
-              class="text-red-600 p-3 text-center inline-flex items-center justify-center w-16 h-16 mb-6 shadow-lg rounded-full bg-red-300"
-            >
+            <div class="text-red-600 p-3 text-center inline-flex items-center justify-center w-16 h-16 mb-6 shadow-lg rounded-full bg-red-300">
               <i class="fas fa-rocket text-xl"></i>
             </div>
             <h3 class="text-3xl font-semibold">Tevékenységeink</h3>
@@ -245,7 +205,7 @@
     </div>
   </section>
 
-  <section class="pt-20 pb-48">
+  <section class="pt-20">
     <div class="container mx-auto px-4">
       <div class="flex flex-wrap justify-center text-center mb-24">
         <div class="w-full lg:w-6/12 px-4">
@@ -286,6 +246,7 @@
             </div>
           </div>
         </div>
+
         <div class="w-full md:w-3/12 lg:w-4/12 lg:mb-0 mb-12 px-4">
           <div class="px-6">
             <img
@@ -338,5 +299,80 @@
       </div>
     </div>
   </section>
+
+  <section class="pt-20 pb-24">
+    <div class="container mx-auto px-4">
+      <div class="flex flex-wrap mb-24">
+        <div class="w-full lg:w-6/12 px-4">
+          <div class="text-red-600 p-3 text-center inline-flex items-center justify-center w-16 h-16 mb-6 shadow-lg rounded-full bg-red-300">
+            <i class="fas fa-address-card text-xl"></i>
+          </div>
+          <h2 class="text-4xl font-semibold">Kapcsolat</h2>
+          <ul class="list-none mt-6">
+            <li class="py-2">
+              <div class="flex items-center">
+                <div>
+                  <span class="text-xs font-semibold inline-block py-1 px-2 uppercase rounded-full text-blueGray-500 bg-blueGray-50 mr-3">
+                    <i class="fas fa-map-marker"></i>
+                  </span>
+                </div>
+                <div>
+                  <h4 class="text-blueGray-500">
+                    Cím: 2482 Gárdony (Agárd), Gárdonyi Géza utca 45.
+                  </h4>
+                </div>
+              </div>
+              <div class="flex items-center">
+                <div>
+                  <span class="text-xs font-semibold inline-block py-1 px-2 uppercase rounded-full text-blueGray-500 bg-blueGray-50 mr-3">
+                    <i class="fas fa-phone"></i>
+                  </span>
+                </div>
+                <div>
+                  <h4 class="text-blueGray-500">
+                    Telefon: <a href="tel:06-30-2777-806">06-30-2777-806</a>
+                  </h4>
+                </div>
+              </div>
+              <div class="flex items-center">
+                <div>
+                  <span class="text-xs font-semibold inline-block py-1 px-2 uppercase rounded-full text-blueGray-500 bg-blueGray-50 mr-3">
+                    <i class="fas fa-envelope-open"></i>
+                  </span>
+                </div>
+                <div>
+                  <h4 class="text-blueGray-500">
+                    Email: <a href="mailto:jopontadomanybolt@gmail.com">jopontadomanybolt@gmail.com</a>
+                  </h4>
+                </div>
+              </div>
+              <div class="flex items-center">
+                <div>
+                  <span class="text-xs font-semibold inline-block py-1 px-2 uppercase rounded-full text-blueGray-500 bg-blueGray-50 mr-3">
+                    <i class="fas fa-facebook-f"></i>
+                  </span>
+                </div>
+                <div>
+                  <h4 class="text-blueGray-500">
+                    Facebook: <a href="https://www.facebook.com/jopontadomanybolt">https://www.facebook.com/jopontadomanybolt</a>
+                  </h4>
+                </div>
+              </div>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  
+  <div class="flex flex-wrap items-center md:justify-between justify-center bg-blueGray-200">
+    <hr class="my-6 border-blueGray-300" />
+    <div class="w-full md:w-4/12 px-4 mx-auto text-center">
+      <div class="text-sm text-blueGray-500 font-semibold py-1">
+        Copyright © {{ date }} Jópont AdományBolt (<a href=" www.linkedin.com/in/kovg" class="text-blueGray-500 hover:text-blueGray-800">Kovács Gábor</a>).
+      </div>
+    </div>
+  </div>
 </main>
 
