--- a/src/app/views/landing/landing.component.html
+++ b/src/app/views/landing/landing.component.html
@@ -205,7 +205,128 @@
     </div>
   </section>
 
-  <section class="pt-20">
+  <section class="relative py-20 bg-blueGray-200">
+    <div class="container mx-auto my-6 px-4">
+      <div class="flex flex-wrap items-center">
+        <div class="w-full px-4 mr-auto ml-auto">
+          <div
+            class="text-red-600 p-3 text-center inline-flex items-center justify-center w-16 h-16 mb-6 shadow-lg rounded-full bg-red-300"
+          >
+            <i class="fas fa-rocket text-xl"></i>
+          </div>
+          <h3 class="text-3xl mb-2 font-semibold leading-normal">
+            Amit már elértünk
+          </h3>
+        </div>
+      </div>
+    </div>
+
+    <div class="container rounded-lg mx-auto px-4 bg-white">
+      <div class="items-center flex flex-wrap">
+        <div class="w-full md:w-4/12 ml-auto mr-auto px-4">
+          <img
+            alt="..."
+            class="max-w-full rounded-lg shadow-lg m-4"
+            src="assets/img/motyo1.jpg"
+          />
+          <img
+            alt="..."
+            class="max-w-full rounded-lg shadow-lg m-4"
+            src="assets/img/motyo2.jpg"
+          />
+        </div>
+        <div class="w-full md:w-5/12 ml-auto mr-auto px-4">
+          <div class="md:pr-12">
+            <div
+              class="text-red-600 p-3 text-center inline-flex items-center justify-center w-16 h-16 mb-6 shadow-lg rounded-full bg-red-300"
+            >
+              <i class="fas fa-dog text-xl"></i>
+            </div>
+            <h3 class="text-3xl font-semibold">Motyó</h3>
+            <p class="mt-4 text-lg leading-relaxed text-blueGray-500">
+              Kihoztuk az ASKA alapítványtól Motyót és gazdit kerestünk neki,
+              hogy legalább egy kutyával kevesebb legyen a menhelyen
+              és eggyel több pedig szerető családban.
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="container mx-auto px-4">
+      <div class="items-center flex flex-wrap">
+        <div class="w-full md:w-5/12 ml-auto mr-auto px-4">
+          <div class="md:pr-12">
+            <div
+              class="text-red-600 p-3 text-center inline-flex items-center justify-center w-16 h-16 mb-6 shadow-lg rounded-full bg-red-300"
+            >
+              <i class="fas fa-box text-xl"></i>
+            </div>
+            <h3 class="text-3xl font-semibold">Cipősdoboz</h3>
+            <p class="mt-4 text-lg leading-relaxed text-blueGray-500">
+              A Cipősdoboz akcióban gyűjtőpontként vettünk részt,
+              így 81 csomagot adtunk át a Baptista szeretetszolgálat részére,
+              hogy azok 81 rászoruló gyermek karácsonyát tegyék szebbé.
+            </p>
+          </div>
+        </div>
+        <div class="w-full md:w-4/12 ml-auto mr-auto px-4">
+          <img
+            alt="..."
+            class="max-w-full rounded-lg shadow-lg m-4"
+            src="assets/img/ciposdoboz.jpg"
+          />
+        </div>
+      </div>
+    </div>
+
+    <div class="container rounded-lg mx-auto px-4 bg-white">
+      <div class="items-center flex flex-wrap">
+        <div class="w-full md:w-4/12 ml-auto mr-auto px-4">
+          <img
+            alt="..."
+            class="max-w-full rounded-lg shadow-lg m-4"
+            src="assets/img/gyermekotthon.jpg"
+          />
+        </div>
+        <div class="w-full md:w-5/12 ml-auto mr-auto px-4">
+          <div class="md:pr-12">
+            <div
+              class="text-red-600 p-3 text-center inline-flex items-center justify-center w-16 h-16 mb-6 shadow-lg rounded-full bg-red-300"
+            >
+              <i class="fas fa-home text-xl"></i>
+            </div>
+            <h3 class="text-3xl font-semibold">Gyermekotthon</h3>
+            <p class="mt-4 text-lg leading-relaxed text-blueGray-500">
+              A székesfehérvári gyermekotthon összes lakójának teljesítettük karácsonyi kívánságát,
+              így 44 ajándékcsomaggal érkeztünk meg a Tüzér utcába.
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section class="relative py-20">
+    <div
+      class="bottom-auto top-0 left-0 right-0 w-full absolute pointer-events-none overflow-hidden -mt-20 h-20"
+      style="transform: translateZ(0); top: 1px"
+    >
+      <svg
+        class="absolute bottom-0 overflow-hidden"
+        xmlns="http://www.w3.org/2000/svg"
+        preserveAspectRatio="none"
+        version="1.1"
+        viewBox="0 0 2560 100"
+        x="0"
+        y="0"
+      >
+        <polygon
+          class="text-white fill-current"
+          points="2560 0 2560 100 0 100"
+        ></polygon>
+      </svg>
+    </div>
     <div class="container mx-auto px-4">
       <div class="flex flex-wrap justify-center text-center mb-24">
         <div class="w-full lg:w-6/12 px-4">
@@ -300,7 +421,7 @@
     </div>
   </section>
 
-  <section class="pt-20 pb-24">
+  <section class="relative pt-20 pb-24">
     <div class="container mx-auto px-4">
       <div class="flex flex-wrap mb-24">
         <div class="w-full lg:w-6/12 px-4">
