--- a/src/app/views/landing/landing.component.html
+++ b/src/app/views/landing/landing.component.html
@@ -145,6 +145,35 @@
               </blockquote>
             </div>
           </div>
+
+          <div
+              class="w-full mr-12 ml-12 flex flex-col min-w-0 break-words bg-white w-full mb-6 shadow-lg rounded-lg bg-orange-600"
+            >
+              <img
+                alt="..."
+                src="assets/img/pénz.jpg"
+                class="w-full align-middle rounded-t-lg"
+              />
+              
+              <blockquote class="relative p-8 mb-4">
+                <svg
+                  preserveAspectRatio="none"
+                  xmlns="http://www.w3.org/2000/svg"
+                  viewBox="0 0 583 95"
+                  class="absolute left-0 w-full block h-95-px -top-94-px"
+                  >
+                  <polygon
+                    points="-30,95 583,95 583,65"
+                    class="text-orange-600 fill-current"
+                  ></polygon>
+                </svg>
+                <h4 class="text-xl font-bold text-white">Ha pénzösszeggel támogatnátok alapítványunk aktuális célkitűzéseit, akkor az alábbi bankszámlaszámon tehetitek meg:</h4>
+                
+                <p class="text-md font-light mt-2 text-white text-center">
+                  JóPont Alapítvány / 10402908-50526949-65751013
+                </p>
+              </blockquote>
+            </div>
       </div>
     </div>
   </section>
