--- a/src/assets/styles/tailwind.css
+++ b/src/assets/styles/tailwind.css
@@ -1302,6 +1302,11 @@ select {
   background-color: rgba(249, 115, 22, var(--tw-bg-opacity));
 }
 
+.bg-orange-600 {
+  --tw-bg-opacity: 1;
+  background-color: rgba(234, 88, 12, var(--tw-bg-opacity));
+}
+
 .bg-red-200 {
   --tw-bg-opacity: 1;
   background-color: rgba(254, 202, 202, var(--tw-bg-opacity));
@@ -2227,11 +2232,6 @@ select {
   margin-bottom: 1.5rem;
 }
 
-.my-16 {
-  margin-top: 4rem;
-  margin-bottom: 4rem;
-}
-
 .mx-auto {
   margin-left: auto;
   margin-right: auto;
@@ -2341,8 +2341,16 @@ select {
   margin-top: 3rem;
 }
 
+.mr-12 {
+  margin-right: 3rem;
+}
+
 .mb-12 {
   margin-bottom: 3rem;
+}
+
+.ml-12 {
+  margin-left: 3rem;
 }
 
 .mt-16 {
@@ -2815,6 +2823,10 @@ select {
   padding-top: 6rem;
 }
 
+.pb-24 {
+  padding-bottom: 6rem;
+}
+
 .pt-32 {
   padding-top: 8rem;
 }
@@ -2874,6 +2886,7 @@ select {
 }
 
 .sticky {
+  position: -webkit-sticky;
   position: sticky;
 }
 
@@ -3176,6 +3189,11 @@ select {
   color: rgba(249, 115, 22, var(--tw-text-opacity));
 }
 
+.text-orange-600 {
+  --tw-text-opacity: 1;
+  color: rgba(234, 88, 12, var(--tw-text-opacity));
+}
+
 .text-red-300 {
   --tw-text-opacity: 1;
   color: rgba(252, 165, 165, var(--tw-text-opacity));
@@ -3472,10 +3490,6 @@ select {
 
 .break-all {
   word-break: break-all;
-}
-
-.w-0 {
-  width: 0px;
 }
 
 .w-5 {
