--- a/src/app/views/landing/landing.component.html
+++ b/src/app/views/landing/landing.component.html
@@ -329,6 +329,56 @@
         </div>
       </div>
     </div>
+
+    <div class="container mx-auto px-4">
+      <div class="items-center flex flex-wrap">
+        <div class="w-full md:w-5/12 ml-auto mr-auto px-4">
+          <div class="md:pr-12">
+            <div
+              class="text-red-600 p-3 text-center inline-flex items-center justify-center w-16 h-16 mb-6 shadow-lg rounded-full bg-red-300"
+            >
+              <i class="fas fa-briefcase"></i>
+            </div>
+            <h3 class="text-3xl font-semibold">Táskák</h3>
+            <p class="mt-4 text-lg leading-relaxed text-blueGray-500">
+              140 táskával gazdagítottuk a #nemluxustáska kezdeményezést.
+            </p>
+          </div>
+        </div>
+        <div class="w-full md:w-4/12 ml-auto mr-auto px-4 py-10">
+          <img
+            alt="..."
+            class="max-w-full rounded-lg shadow-lg m-4"
+            src="assets/img/taskak.png"
+          />
+        </div>
+      </div>
+    </div>
+
+    <div class="container rounded-lg mx-auto px-4 bg-white">
+      <div class="items-center flex flex-wrap">
+        <div class="w-full md:w-4/12 ml-auto mr-auto px-4">
+          <img
+            alt="..."
+            class="max-w-full rounded-lg shadow-lg m-4"
+            src="assets/img/madár_kórház_inkubátor.png"
+          />
+        </div>
+        <div class="w-full md:w-5/12 ml-auto mr-auto px-4">
+          <div class="md:pr-12">
+            <div
+              class="text-red-600 p-3 text-center inline-flex items-center justify-center w-16 h-16 mb-6 shadow-lg rounded-full bg-red-300"
+            >
+              <i class="fas fa-dove text-xl"></i>
+            </div>
+            <h3 class="text-3xl font-semibold">Inkubátor</h3>
+            <p class="mt-4 text-lg leading-relaxed text-blueGray-500">
+              2022 első negyed éves bevételeinkből a sukorói vadmadárkórház számára vásároltunk fiókanevelő inkubátort.
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
   </section>
 
   <section class="relative py-20">
