--- a/src/app/views/landing/landing.component.html
+++ b/src/app/views/landing/landing.component.html
@@ -430,6 +430,81 @@
       </div>
     </div>
 
+    <div class="container mx-auto px-4">
+      <div class="items-center flex flex-wrap">
+        <div class="w-full md:w-5/12 ml-auto mr-auto px-4">
+          <div class="md:pr-12">
+            <div
+              class="text-red-600 p-3 text-center inline-flex items-center justify-center w-16 h-16 mb-6 shadow-lg rounded-full bg-red-300"
+            >
+              <i class="fas fa-leaf"></i>
+            </div>
+            <h3 class="text-3xl font-semibold">Menekültek</h3>
+            <p class="mt-4 text-lg leading-relaxed text-blueGray-500">
+              Helyi segítőkkel és vállalkozókkal összefogva tartós élelmiszert és tisztasági felszerelést juttattunk el a környéken elszállásolt ukrán menekülteknek és a határra.
+            </p>
+          </div>
+        </div>
+        <div class="w-full md:w-4/12 ml-auto mr-auto px-4 py-10">
+          <img
+            alt="..."
+            class="max-w-full rounded-lg shadow-lg m-4"
+            src="assets/img/menekültek.jpg"
+          />
+        </div>
+      </div>
+    </div>
+
+    <div class="container rounded-lg mx-auto px-4 bg-white">
+      <div class="items-center flex flex-wrap">
+        <div class="w-full md:w-4/12 ml-auto mr-auto px-4">
+          <img
+            alt="..."
+            class="max-w-full rounded-lg shadow-lg m-4"
+            src="assets/img/bringa.png"
+          />
+        </div>
+        <div class="w-full md:w-5/12 ml-auto mr-auto px-4">
+          <div class="md:pr-12">
+            <div
+              class="text-red-600 p-3 text-center inline-flex items-center justify-center w-16 h-16 mb-6 shadow-lg rounded-full bg-red-300"
+            >
+              <i class="fas fa-image"></i>
+            </div>
+            <h3 class="text-3xl font-semibold">Bringa</h3>
+            <p class="mt-4 text-lg leading-relaxed text-blueGray-500">
+              A Parkerdei Óvoda  tavaszi  „Bringázz az oviba!” programja alkalmából minden ovist egy kulaccsal ajándékoztunk meg.
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="container mx-auto px-4">
+      <div class="items-center flex flex-wrap">
+        <div class="w-full md:w-5/12 ml-auto mr-auto px-4">
+          <div class="md:pr-12">
+            <div
+              class="text-red-600 p-3 text-center inline-flex items-center justify-center w-16 h-16 mb-6 shadow-lg rounded-full bg-red-300"
+            >
+              <i class="fas fa-leaf"></i>
+            </div>
+            <h3 class="text-3xl font-semibold">Tábor</h3>
+            <p class="mt-4 text-lg leading-relaxed text-blueGray-500">
+              Nyáron a Chernel István Általános Iskola és Gimnázium valamint a Zichyújfalui Református Általános Iskola gyermekeinek táboroztatását támogattuk.
+            </p>
+          </div>
+        </div>
+        <div class="w-full md:w-4/12 ml-auto mr-auto px-4 py-10">
+          <img
+            alt="..."
+            class="max-w-full rounded-lg shadow-lg m-4"
+            src="assets/img/tábor.png"
+          />
+        </div>
+      </div>
+    </div>
+
   </section>
 
   <section class="relative py-20">
