--- a/src/app/views/landing/landing.component.html
+++ b/src/app/views/landing/landing.component.html
@@ -251,12 +251,7 @@
           <img
             alt="..."
             class="max-w-full rounded-lg shadow-lg m-4"
-            src="assets/img/motyo1.jpg"
-          />
-          <img
-            alt="..."
-            class="max-w-full rounded-lg shadow-lg m-4"
-            src="assets/img/motyo2.jpg"
+            src="assets/img/motyo_1.jpg"
           />
         </div>
         <div class="w-full md:w-5/12 ml-auto mr-auto px-4">
@@ -299,12 +294,7 @@
           <img
             alt="..."
             class="max-w-full rounded-lg shadow-lg m-4"
-            src="assets/img/ciposdoboz.jpg"
-          />
-          <img
-            alt="..."
-            class="max-w-full rounded-lg shadow-lg m-4"
-            src="assets/img/ciposdoboz2.jpg"
+            src="assets/img/ciposdoboz_1.jpg"
           />
         </div>
       </div>
@@ -369,12 +359,7 @@
           <img
             alt="..."
             class="max-w-full rounded-lg shadow-lg m-4"
-            src="assets/img/vadmadar1.jpg"
-          />
-          <img
-            alt="..."
-            class="max-w-full rounded-lg shadow-lg m-4"
-            src="assets/img/vadmadar2.jpg"
+            src="assets/img/madarkorhaz_1.jpg"
           />
         </div>
         <div class="w-full md:w-5/12 ml-auto mr-auto px-4">
@@ -414,12 +399,7 @@
           <img
             alt="..."
             class="max-w-full rounded-lg shadow-lg m-4"
-            src="assets/img/viragok.png"
-          />
-          <img
-            alt="..."
-            class="max-w-full rounded-lg shadow-lg m-4"
-            src="assets/img/viragok2.jpg"
+            src="assets/img/viragok_1.jpg"
           />
         </div>
       </div>
@@ -431,7 +411,7 @@
           <img
             alt="..."
             class="max-w-full rounded-lg shadow-lg m-4"
-            src="assets/img/gardonyi-ovoda.png"
+            src="assets/img/gardonyi_ovoda_1.jpg"
           />
         </div>
         <div class="w-full md:w-5/12 ml-auto mr-auto px-4">
@@ -485,7 +465,7 @@
           <img
             alt="..."
             class="max-w-full rounded-lg shadow-lg m-4"
-            src="assets/img/bringa.png"
+            src="assets/img/bringa_1.jpg"
           />
         </div>
         <div class="w-full md:w-5/12 ml-auto mr-auto px-4">
@@ -577,12 +557,7 @@
           <img
             alt="..."
             class="max-w-full rounded-lg shadow-lg m-4"
-            src="assets/img/faultetes1.jpg"
-          />
-          <img
-            alt="..."
-            class="max-w-full rounded-lg shadow-lg m-4"
-            src="assets/img/faultetes2.jpg"
+            src="assets/img/faultetes_1.jpg"
           />
         </div>
       </div>
@@ -594,17 +569,7 @@
           <img
             alt="..."
             class="max-w-full rounded-lg shadow-lg m-4"
-            src="assets/img/velencei_otthon1.jpg"
-          />
-          <img
-            alt="..."
-            class="max-w-full rounded-lg shadow-lg m-4"
-            src="assets/img/velencei_otthon2.jpg"
-          />
-          <img
-            alt="..."
-            class="max-w-full rounded-lg shadow-lg m-4"
-            src="assets/img/velencei_otthon3.jpg"
+            src="assets/img/velencei_otthon_1.jpg"
           />
         </div>
         <div class="w-full md:w-5/12 ml-auto mr-auto px-4">
