--- a/src/app/views/landing/landing.component.html
+++ b/src/app/views/landing/landing.component.html
@@ -419,7 +419,7 @@
             <div
               class="text-red-600 p-3 text-center inline-flex items-center justify-center w-16 h-16 mb-6 shadow-lg rounded-full bg-red-300"
             >
-              <i class="fas fa-image"></i>
+              <i class="fas fa-children"></i>
             </div>
             <h3 class="text-3xl font-semibold">Fókuszban a helyi gyerekek</h3>
             <p class="mt-4 text-lg leading-relaxed text-blueGray-500">
@@ -440,7 +440,7 @@
             <div
               class="text-red-600 p-3 text-center inline-flex items-center justify-center w-16 h-16 mb-6 shadow-lg rounded-full bg-red-300"
             >
-              <i class="fas fa-leaf"></i>
+              <i class="fas fa-truck-field"></i>
             </div>
             <h3 class="text-3xl font-semibold">Menekültek</h3>
             <p class="mt-4 text-lg leading-relaxed text-blueGray-500">
@@ -473,7 +473,7 @@
             <div
               class="text-red-600 p-3 text-center inline-flex items-center justify-center w-16 h-16 mb-6 shadow-lg rounded-full bg-red-300"
             >
-              <i class="fas fa-image"></i>
+              <i class="fa-solid fa-bicycle"></i>
             </div>
             <h3 class="text-3xl font-semibold">"Bringázz az oviba"</h3>
             <p class="mt-4 text-lg leading-relaxed text-blueGray-500">
@@ -494,7 +494,7 @@
             <div
               class="text-red-600 p-3 text-center inline-flex items-center justify-center w-16 h-16 mb-6 shadow-lg rounded-full bg-red-300"
             >
-              <i class="fas fa-leaf"></i>
+              <i class="fas fa-campground"></i>
             </div>
             <h3 class="text-3xl font-semibold">Nyári táborok</h3>
             <p class="mt-4 text-lg leading-relaxed text-blueGray-500">
@@ -526,7 +526,7 @@
             <div
               class="text-red-600 p-3 text-center inline-flex items-center justify-center w-16 h-16 mb-6 shadow-lg rounded-full bg-red-300 mt-8"
             >
-              <i class="fas fa-image"></i>
+              <i class="fas fa-baby"></i>
             </div>
             <h3 class="text-3xl font-semibold">Két nap a legkisebb hősökért</h3>
             <p class="mt-4 text-lg leading-relaxed text-blueGray-500 mb-8">
@@ -545,7 +545,7 @@
             <div
               class="text-red-600 p-3 text-center inline-flex items-center justify-center w-16 h-16 mb-6 shadow-lg rounded-full bg-red-300"
             >
-              <i class="fas fa-leaf"></i>
+              <i class="fas fa-tree"></i>
             </div>
             <h3 class="text-3xl font-semibold">Faültetés</h3>
             <p class="mt-4 text-lg leading-relaxed text-blueGray-500">
@@ -577,7 +577,7 @@
             <div
               class="text-red-600 p-3 text-center inline-flex items-center justify-center w-16 h-16 mb-6 shadow-lg rounded-full bg-red-300 mt-8"
             >
-              <i class="fas fa-image"></i>
+              <i class="fas fa-home"></i>
             </div>
             <h3 class="text-3xl font-semibold">Velencei gyermekkotthon</h3>
             <p class="mt-4 text-lg leading-relaxed text-blueGray-500 mb-8">
@@ -597,7 +597,7 @@
             <div
               class="text-red-600 p-3 text-center inline-flex items-center justify-center w-16 h-16 mb-6 shadow-lg rounded-full bg-red-300"
             >
-              <i class="fas fa-leaf"></i>
+              <i class="fas fa-school"></i>
             </div>
             <h3 class="text-3xl font-semibold">Pápay Ágoston Általános Iskola, Készségfejlesztő Iskola és Kollégium</h3>
             <p class="mt-4 text-lg leading-relaxed text-blueGray-500">
@@ -611,6 +611,33 @@
             class="max-w-full rounded-lg shadow-lg m-4"
             src="assets/img/papay_agoston.jpg"
           />
+        </div>
+      </div>
+    </div>
+
+    <div class="container rounded-lg mx-auto px-4 bg-white">
+      <div class="items-center flex flex-wrap">
+        <div class="w-full md:w-4/12 ml-auto mr-auto px-4">
+          <img
+            alt="..."
+            class="max-w-full rounded-lg shadow-lg m-4"
+            src="assets/img/kerteszkedes.jpg"
+          />
+        </div>
+        <div class="w-full md:w-5/12 ml-auto mr-auto px-4">
+          <div class="md:pr-12">
+            <div
+              class="text-red-600 p-3 text-center inline-flex items-center justify-center w-16 h-16 mb-6 shadow-lg rounded-full bg-red-300 mt-8"
+            >
+              <i class="fas fa-recycle"></i>
+            </div>
+            <h3 class="text-3xl font-semibold">Kertészkedés</h3>
+            <p class="mt-4 text-lg leading-relaxed text-blueGray-500 mb-8">
+              Komposztálókkal és vetőmag csomagokkal indítottuk a 2023-as évet,
+              hogy a helyi lakosságot - elsősorban a gyerekeket - a kertészkedés
+              örömteli tevékenységén keresztül egy fenntarthatóbb életmóddal ismertessük meg.
+            </p>
+          </div>
         </div>
       </div>
     </div>
