--- a/src/app/views/landing/landing.component.html
+++ b/src/app/views/landing/landing.component.html
@@ -147,7 +147,7 @@
           </div>
 
           <div
-              class="w-full mr-12 ml-12 flex flex-col min-w-0 break-words bg-white w-full mb-6 shadow-lg rounded-lg bg-orange-600"
+              class="w-full mr-auto ml-auto flex flex-col min-w-0 break-words bg-white w-full mb-6 shadow-lg rounded-lg bg-orange-600"
             >
               <img
                 alt="..."
@@ -172,8 +172,20 @@
                 <p class="text-md font-light mt-2 text-white text-center">
                   JóPont Alapítvány / 10402908-50526949-65751013
                 </p>
+
               </blockquote>
+
+              <div class="w-full mx-auto px-4 pb-4 sm:h-700-px xl:h-500-px h-750-px">
+                <iframe
+                src="https://adjukossze.hu/adomanygyujtes/gyerek-zsivajtol-legyen-hangos-a-velencei-to-2934/tamogatom/keret"
+                title="Adjukössze - Adományozás indítása (Gyerek zsivajtól legyen hangos a Velencei-tó!)"
+                style="border: 0;"
+                width="100%"
+                height="100%"
+                allowpaymentrequest="true">
+              </iframe>
             </div>
+          </div>
       </div>
     </div>
   </section>
