--- a/src/assets/styles/tailwind.css
+++ b/src/assets/styles/tailwind.css
@@ -2087,12 +2087,20 @@ select {
   height: 70px;
 }
 
+.h-400-px {
+  height: 400px;
+}
+
 .h-500-px {
   height: 500px;
 }
 
 .h-600-px {
   height: 600px;
+}
+
+.h-750-px {
+  height: 750px;
 }
 
 .text-55 {
@@ -3716,6 +3724,10 @@ select {
   .sm\:w-6\/12 {
     width: 50%;
   }
+
+  .sm\:h-700-px {
+    height: 700px;
+  }
 }
 
 @media (min-width: 768px) {
@@ -3864,10 +3876,6 @@ select {
 
   .md\:w-64 {
     width: 16rem;
-  }
-
-  .md\:w-3\/12 {
-    width: 25%;
   }
 
   .md\:w-4\/12 {
@@ -4041,6 +4049,11 @@ select {
   .lg\:w-9\/12 {
     width: 75%;
   }
+
+  .lg\:h-500-px {
+    height: 500px;
+  }
+
 }
 
 @media (min-width: 1280px) {
@@ -4062,6 +4075,10 @@ select {
 
   .xl\:w-8\/12 {
     width: 66.666667%;
+  }
+
+  .xl\:h-500-px {
+    height: 500px;
   }
 }
 
