--- a/src/app/views/landing/landing.component.html
+++ b/src/app/views/landing/landing.component.html
@@ -186,6 +186,41 @@
               </iframe>
             </div>
           </div>
+
+          <div
+              class="w-full mr-auto ml-auto flex flex-col min-w-0 break-words bg-white w-full mb-6 shadow-lg rounded-lg bg-orange-600"
+            >
+              <div class="w-full bg-white rounded-t-lg">
+                <a href="https://vorosmartyradio.hu/" target="_blank">
+                  <img
+                    class="align-middle rounded-t-lg mr-auto ml-auto"
+                    alt="Vörösmarty Rádió logó"
+                    src="assets/img/vorosmarty_radio.png"
+                  />
+                </a>
+              </div>
+              
+              <blockquote class="relative p-8 mb-4">
+                <svg
+                  preserveAspectRatio="none"
+                  xmlns="http://www.w3.org/2000/svg"
+                  viewBox="0 0 583 95"
+                  class="absolute left-0 w-full block"
+                  style="height: 20px; top: -20px;"
+                  >
+                  <polygon
+                    points="0,100 583,100 583,0"
+                    class="text-orange-600 fill-current"
+                  ></polygon>
+                </svg>
+                <p class="text-xl font-bold text-white text-center">2023.05.24.</p>
+                
+                <audio controls class="mr-auto ml-auto">
+                  <source src="assets/audio/jo_pont_vorosmarty_radio.mp3" type="audio/mpeg" />
+                </audio>
+
+              </blockquote>
+          </div>
       </div>
     </div>
   </section>
