--- a/src/app/views/landing/landing.component.html
+++ b/src/app/views/landing/landing.component.html
@@ -721,7 +721,7 @@
         </div>
       </div>
       <div class="flex flex-wrap">
-        <div class="w-full md:w-6/12 lg:w-6/12 lg:mb-0 mb-12 px-4">
+        <div class="w-full md:w-4/12 lg:w-4/12 lg:mb-0 mb-12 px-4">
           <div class="px-6">
             <img
               alt="..."
@@ -752,7 +752,7 @@
           </div>
         </div>
 
-        <div class="w-full md:w-6/12 lg:w-6/12 lg:mb-0 mb-12 px-4">
+        <div class="w-full md:w-4/12 lg:w-4/12 lg:mb-0 mb-12 px-4">
           <div class="px-6">
             <img
               alt="..."
@@ -771,6 +771,39 @@
               </div>
               <div>
                 Én Gárdonyban élek 5 éve a kisfiammal, kutyáimmal, macskámmal, deguinkkal, nagy kertünkkel. Ahogy ők érkeztek az életembe sorban, úgy érkezett bele a tudatosság az embertársaim, környezetem irányába és hogy akárhol is élek visszaadhassak a helyi közösségnek. Szakmámat tekintve közgazdász vagyok, egy szoftver cégnél dolgozom azon, hogy minél tehetségesebb emberek dolgozhassanak egy minél jobb munkahelyen. Az első kutyasétáltatásom 11 éve volt, azóta voltam zarándok, biofarm önkéntes, ÖkoKör vezető, voltam zöldségkosár-közösség tagja, hobbikertész, érdekel a permakultúra, jó úton vagyok a nulla hulladék felé. Az adományboltot is egy olyan helynek álmodom, ahol egy közösségként egymásra találhatnak a hasonlóan gondolkodók, akik szelíden de kitartóan, tenniakarással és pozitívan néznek és lépkednek a jövőbe: vásárlók-adományozók-civil szervezetek és mi.
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="w-full md:w-4/12 lg:w-4/12 lg:mb-0 mb-12 px-4">
+          <div class="px-6">
+            <img
+              alt="..."
+              src="assets/img/gulyás_judit.jpg"
+              class="shadow-lg rounded-full mx-auto max-w-120-px"
+            />
+            <div class="pt-6 text-center">
+              <h5 class="text-xl font-bold">Gulyás Judit</h5>
+              <div class="mt-6">
+                <button
+                  class="bg-lightBlue-600 text-white w-8 h-8 rounded-full outline-none focus:outline-none mr-1 mb-1"
+                  type="button"
+                >
+                  <a href="https://www.facebook.com/petrasko.judit" target="blank"><i class="fab fa-facebook-f"></i></a>
+                </button>
+              </div>
+              <div>
+                Négy éve élek a Velencei-tó partján családommal. Egy ideig a hajnali ingázók boldog csapatához tartoztunk,
+                de 2022. óta már a helyi mezőgazdasági technikum csapatát erősítem nyelvtanárként. A korrektséget tartom
+                az egyik legfontosabb emberi erénynek, ami a Jópont Alapítvány mindegyik projektjét élhetővé teszi:
+                átlátható és mindenki számra követhető ügyekről van szó a célkitűzésektől a megvalósulásig, így
+                pontosan látszik, hogy az adományok hová kerülnek. Szeretem, ha mindennek van helye, térben és időben
+                is. Szívesen írok pályázatokat, mert ha egy ötlet jó, azzal addig kell kilincselni, ameddig táptalajt
+                nem talál. Inspirálódni, kikapcsolódni, vagy éppen egy munkával kapcsolatban elmélkedni kétkeréken
+                szoktam – egy tókör csodákra képes. És ha már idézet, akkor svéd gyermekversek, mert ők mindig tudják,
+                mi az, ami a szívedet nyomja: „Sten-Malténak nagy, vörös és elálló füle van. Nekem tetszik a nagy,
+                vörös és elálló fül”.
               </div>
             </div>
           </div>
